--- a/Reading_CSV_0427.ipynb
+++ b/Reading_CSV_0427.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "4b8d3ddf",
    "metadata": {},
    "outputs": [],
@@ -17,10 +17,10 @@
     "# writer = csv.writer(f)\n",
     "ave_x = []\n",
     "ave_v = []\n",
-    "last_sim = 162\n",
+    "last_sim = 210\n",
     "sim_num = 24\n",
     "for i in range (last_sim-sim_num+1,last_sim+1):  \n",
-    "    df = pd.read_csv(os.getcwd()+'/envtest/python/saved/PPO_'+str(i)+'/TestTraj/test_traj_02000.csv',usecols=[\"done\",\"t\",\"px\"])\n",
+    "    df = pd.read_csv(os.getcwd()+'/envtest/python/saved/PPO_'+str(i)+'/TestTraj/test_traj_00250.csv',usecols=[\"done\",\"t\",\"px\"])\n",
     "    l = []\n",
     "    v = []\n",
     "    for index, row in df.iterrows():\n",
@@ -35,8 +35,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "b40da311",
+   "execution_count": 4,
+   "id": "49f6d417",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8.512406286776441, 7.451928539957842, 9.497457761395648, 6.760588430918306, 8.063338371993758, 6.31850140393471, 8.980763716473545, 8.44473780052439, 9.541596378182076, 10.867035156910166, 7.710282671345108, 6.378510607515765, 6.680801768084415, 6.145963935943083, 9.373983346639125, 7.053024954913737, 8.566876262449973, 8.30970981278378, 6.5830650123470225, 11.540244759265873, 7.244518018712719, 6.404564848964472, 5.759141529727616, 8.956553986047284]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ave_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "303047a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import pandas as pd\n",
+    "# import os\n",
+    "# import statistics\n",
+    "# import csv\n",
+    "# import seaborn as sns\n",
+    "\n",
+    "# # with open(os.getcwd()+'/envtest/python/saved/x_averge.csv', 'w') as f:\n",
+    "# # writer = csv.writer(f)\n",
+    "# ave_x = []\n",
+    "# ave_v = []\n",
+    "# last_sim = 211\n",
+    "# sim_num = 1\n",
+    "# for i in range (last_sim-sim_num+1,last_sim+1):  \n",
+    "#     df = pd.read_csv(os.getcwd()+'/envtest/python/saved/PPO_'+str(i)+'/TestTraj/test_traj_02000.csv',usecols=[\"done\",\"t\",\"px\"])\n",
+    "#     l = []\n",
+    "#     v = []\n",
+    "#     for index, row in df.iterrows():\n",
+    "#         if row[0]==1.0 and oldt > 0.1:\n",
+    "#             l.append(oldpx)\n",
+    "#             v.append(oldpx/oldt)\n",
+    "#         oldt = row[1]\n",
+    "#         oldpx = row[2]\n",
+    "#     ave_x.append(statistics.mean(l))\n",
+    "#     ave_v.append(statistics.mean(v))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "95c634de",
    "metadata": {
     "scrolled": false
    },
@@ -45,42 +98,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "67.43454528934232\n",
-      "4.349595527865894\n"
+      "[7.548917189858834]\n"
      ]
     }
    ],
    "source": [
-    "# df = pd.read_csv(os.getcwd()+'/envtest/python/saved/PPO_'+str(77)+'/TestTraj/test_traj_02000.csv',usecols=[\"done\",\"t\",\"px\"])\n",
-    "# l = []\n",
-    "# v = []\n",
-    "# for index, row in df.iterrows():\n",
-    "#     if row[0]==1.0 and oldt > 0.1: #episodeが0.1s以下の場合は無視\n",
-    "#         l.append(oldpx)\n",
-    "#         v.append(oldpx/oldt)\n",
-    "#     oldt = row[1]\n",
-    "#     oldpx = row[2]\n",
-    "# print(statistics.mean(l))\n",
-    "# print(statistics.mean(v))"
+    "# print(ave_x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "49f6d417",
+   "execution_count": null,
+   "id": "9bf18358",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[57.562577739278375, 63.94485650148019, 60.97726808717372, 59.24152994967262, 50.60724313247559, 60.29551989519676, 62.980190938128416, 61.587964184934734, 57.82778976537684, 57.04465698216709, 49.19718700498002, 46.64136683349146, 58.99716372155139, 54.3630299826636, 56.62996067987096, 61.717075808608925, 62.7435569392435, 61.236888520748636, 61.434310442210204, 57.80227518206515, 59.0309283517625, 60.645648683303634, 55.863034185181185, 60.57971793927816]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(ave_x)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
