change to simulate in move_coeff=0

--- a/Reading_CSV_0427.ipynb
+++ b/Reading_CSV_0427.ipynb
@@ -55,41 +55,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "303047a9",
+   "execution_count": 5,
+   "id": "68c7a99c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import pandas as pd\n",
-    "# import os\n",
-    "# import statistics\n",
-    "# import csv\n",
-    "# import seaborn as sns\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import statistics\n",
+    "import csv\n",
+    "import seaborn as sns\n",
     "\n",
-    "# # with open(os.getcwd()+'/envtest/python/saved/x_averge.csv', 'w') as f:\n",
-    "# # writer = csv.writer(f)\n",
-    "# ave_x = []\n",
-    "# ave_v = []\n",
-    "# last_sim = 211\n",
-    "# sim_num = 1\n",
-    "# for i in range (last_sim-sim_num+1,last_sim+1):  \n",
-    "#     df = pd.read_csv(os.getcwd()+'/envtest/python/saved/PPO_'+str(i)+'/TestTraj/test_traj_02000.csv',usecols=[\"done\",\"t\",\"px\"])\n",
-    "#     l = []\n",
-    "#     v = []\n",
-    "#     for index, row in df.iterrows():\n",
-    "#         if row[0]==1.0 and oldt > 0.1:\n",
-    "#             l.append(oldpx)\n",
-    "#             v.append(oldpx/oldt)\n",
-    "#         oldt = row[1]\n",
-    "#         oldpx = row[2]\n",
-    "#     ave_x.append(statistics.mean(l))\n",
-    "#     ave_v.append(statistics.mean(v))"
+    "# with open(os.getcwd()+'/envtest/python/saved/x_averge.csv', 'w') as f:\n",
+    "# writer = csv.writer(f)\n",
+    "ave_x = []\n",
+    "ave_v = []\n",
+    "last_sim = 212\n",
+    "sim_num = 1\n",
+    "for i in range (last_sim-sim_num+1,last_sim+1):  \n",
+    "    df = pd.read_csv(os.getcwd()+'/envtest/python/saved/PPO_'+str(i)+'/TestTraj/test_traj_00250.csv',usecols=[\"done\",\"t\",\"px\"])\n",
+    "    l = []\n",
+    "    v = []\n",
+    "    for index, row in df.iterrows():\n",
+    "        if row[0]==1.0 and oldt > 0.1:\n",
+    "            l.append(oldpx)\n",
+    "            v.append(oldpx/oldt)\n",
+    "        oldt = row[1]\n",
+    "        oldpx = row[2]\n",
+    "    ave_x.append(statistics.mean(l))\n",
+    "    ave_v.append(statistics.mean(v))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "95c634de",
+   "execution_count": 6,
+   "id": "bd95e96d",
    "metadata": {
     "scrolled": false
    },
@@ -98,18 +98,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[7.548917189858834]\n"
+      "[6.772878582736508]\n"
      ]
     }
    ],
    "source": [
-    "# print(ave_x)"
+    "print(ave_x)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bf18358",
+   "id": "c09c2663",
    "metadata": {},
    "outputs": [],
    "source": []
